[#966] Add option to include OpenType information for list requests